Dynamic Block/before.tf
resource "aws_security_group" "demo_sg" {
  name = "sample-sg"

ingress {
  from_port   = 8200
  to_port     = 8200
  protocol    = "tcp"
  cidr_blocks = ["0.0.0.0/0"]

}

ingress {
  from_port   = 8201
  to_port     = 8201
  protocol    = "tcp"
  cidr_blocks = ["0.0.0.0/0"]
}

ingress {
  from_port   = 8300
  to_port     = 8300
  protocol    = "tcp"
  cidr_blocks = ["0.0.0.0/0"]
}

ingress {
  from_port   = 9200
  to_port     = 9200
  protocol    = "tcp"
  cidr_blocks = ["0.0.0.0/0"]
}

ingress {
  from_port   = 9500
  to_port     = 9500
  protocol    = "tcp"
  cidr_blocks = ["0.0.0.0/0"]
}
}
